--- a/app/static/html/nav.html
+++ b/app/static/html/nav.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <nav class="top-nav">
     <ul>
-        <li><a href="/" class="active">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="/models">Models</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/contact">Contact</a></li>
