Added previous section button

--- a/app/static/html/model-sections/section1.html
+++ b/app/static/html/model-sections/section1.html
@@ -8,17 +8,15 @@
         <div class="left-panel">
             <div class="content">
                 <h2>Introduction</h2>
-                <p>We'll start by setting up the basic framework needed to perform a Linear Regression analysis.
-                    This involves preparing our data, understanding the relationship between our independent
-                    (predictor) and dependent (outcome) variables, and learning how to interpret the results our
-                    model provides us.</p>
-                <button id=next-button onclick="loadSection(2)">Next section!</button>
+                <p>
+                    Machine Learning, particularly through innovations like GraphCast, is transforming weather forecasting by leveraging vast data sets to predict complex weather patterns, outperforming traditional deterministic models. Unlike conventional methods that rely on fixed equations, ML models like GraphCast analyze historical and current data to uncover hidden patterns, offering more accurate and dynamic forecasts. This capability is especially crucial for predicting extreme weather events, where traditional models fall short. The success of ML in this domain not only represents a leap forward in predictive accuracy but also highlights the potential for significant advancements in fields reliant on weather forecasting, underscoring the growing importance of data-driven approaches in understanding and predicting natural phenomena.</p>
+                <button id=selector-button onclick="loadSection(2)">Next section!</button>
             </div>
 
         </div>
         <div class="right-panel">
             <div class="content">
-                <h2>Graphs</h2>
+                <img src="../../static/img/graphcast.png"></img>
             </div>
         </div>
     </div>
