--- a/app/static/html/model-sections/section2.html
+++ b/app/static/html/model-sections/section2.html
@@ -13,7 +13,8 @@
 from sklearn.linear_model import LinearRegression;
 from sklearn.model_selection import train_test_split
 from sklearn.metrics import mean_squared_error, mean_absolute_error</pre></code>
-                <button id=next-button onclick="loadSection(3)">Next section!</button>
+                <button id=selector-button onclick="loadSection(1)">Previous section!</button>
+                <button id=selector-button onclick="loadSection(3)">Next section!</button>
             </div>
 
         </div>
