Added Linear Regression content and graph, automated graph-making with a function, adding sticky scroll for the right panel, previous and next section buttons.

--- a/app/static/html/model-sections/section1.html
+++ b/app/static/html/model-sections/section1.html
@@ -7,10 +7,19 @@
     <div id="panel-container">
         <div class="left-panel">
             <div class="content">
-                <h2>Introduction</h2>
+                <h1>Introduction</h2>
                 <p>
-                    Machine Learning, particularly through innovations like GraphCast, is transforming weather forecasting by leveraging vast data sets to predict complex weather patterns, outperforming traditional deterministic models. Unlike conventional methods that rely on fixed equations, ML models like GraphCast analyze historical and current data to uncover hidden patterns, offering more accurate and dynamic forecasts. This capability is especially crucial for predicting extreme weather events, where traditional models fall short. The success of ML in this domain not only represents a leap forward in predictive accuracy but also highlights the potential for significant advancements in fields reliant on weather forecasting, underscoring the growing importance of data-driven approaches in understanding and predicting natural phenomena.</p>
-                <button id=selector-button onclick="loadSection(2)">Next section!</button>
+                    Machine Learning, particularly through innovations like GraphCast, is transforming weather
+                    forecasting by leveraging vast data sets to predict complex weather patterns, outperforming
+                    traditional deterministic models. Unlike conventional methods that rely on fixed equations, ML
+                    models like GraphCast analyze historical and current data to uncover hidden patterns, offering more
+                    accurate and dynamic forecasts. This capability is especially crucial for predicting extreme weather
+                    events, where traditional models fall short. The success of ML in this domain not only represents a
+                    leap forward in predictive accuracy but also highlights the potential for significant advancements
+                    in fields reliant on weather forecasting, underscoring the growing importance of data-driven
+                    approaches in understanding and predicting natural phenomena.</p>
+                    <div class = "button-container">
+                <button class=selector-button onclick="loadSection(2)">&gt;</button></div>
             </div>
 
         </div>
