Changed graph library to Plotly

--- a/app/static/html/model-sections/section1.html
+++ b/app/static/html/model-sections/section1.html
@@ -156,8 +156,10 @@ y = df_cleaned['Mean Sea Level Pressure']</pre></code>
         <div class="right-panel">
             <div class="content">
                 <h1>Data Visualization</h1>
-                <iframe id=graphFrame width="80%" height="720">
-                </iframe>
+                <div class=iframe-wrapper>
+                    <iframe id=graphFrame>
+                    </iframe>
+                </div>
                 <div class="button-container">
                     <button class=selector-button id="graph-lr-left" onclick="loadPreviousGraph()">&lt;</button>
                     <button class=selector-button id="graph-lr-right" onclick="loadNextGraph()">&gt;</button>
