--- a/app/static/html/model-sections/section2.html
+++ b/app/static/html/model-sections/section2.html
@@ -3,7 +3,7 @@
     <div id="panel-container">
         <div class="left-panel">
             <div class="content">
-                <h1>Linear Regression for Time Series</h2>
+                <h1>Linear Regression on Time Series</h2>
                     <p>
                     </p>
                     <div class="button-container">
