Decided aginst investigating ARIMA and started Random Forest

--- a/app/static/html/model-sections/section0.html
+++ b/app/static/html/model-sections/section0.html
@@ -2,24 +2,31 @@
 <div id="body-container">
     <header class="model-header">
         <h1>Welcome to the Ithaca Weather Data Tour</h1>
-        <p>Explore the dynamics of weather patterns through our machine learning models.</p>
+        <p>Explore the dynamics of weather patterns through our statistical and machine learning models.</p>
     </header>
     <div id="panel-container">
         <div class="left-panel">
             <div class="content">
                 <h1>Introduction</h2>
-                <p>
-                    Machine Learning, particularly through innovations like GraphCast, is transforming weather
-                    forecasting by leveraging vast data sets to predict complex weather patterns, outperforming
-                    traditional deterministic models. Unlike conventional methods that rely on fixed equations, ML
-                    models like GraphCast analyze historical and current data to uncover hidden patterns, offering more
-                    accurate and dynamic forecasts. This capability is especially crucial for predicting extreme weather
-                    events, where traditional models fall short. The success of ML in this domain not only represents a
-                    leap forward in predictive accuracy but also highlights the potential for significant advancements
-                    in fields reliant on weather forecasting, underscoring the growing importance of data-driven
-                    approaches in understanding and predicting natural phenomena.</p>
-                    <div class = "button-container">
-                <button class=selector-button onclick="loadSection(1)">&gt;</button></div>
+                    <p>
+                        Machine Learning, particularly through innovations like GraphCast, is transforming weather
+                        forecasting by leveraging vast data sets to predict complex weather patterns, outperforming
+                        traditional deterministic models. Unlike conventional methods that rely on fixed equations, ML
+                        models like GraphCast analyze historical and current data to uncover hidden patterns, offering
+                        more
+                        accurate and dynamic forecasts. This capability is especially crucial for predicting extreme
+                        weather
+                        events, where traditional models fall short. The success of ML in this domain not only
+                        represents a
+                        leap forward in predictive accuracy but also highlights the potential for significant
+                        advancements
+                        in fields reliant on weather forecasting, underscoring the growing importance of data-driven
+                        approaches in understanding and predicting natural phenomena. We will start with some more
+                        traditional statistical models and identify their weaknesses, then move onto machine learning
+                        models.</p>
+                    <div class="button-container">
+                        <button class=selector-button onclick="loadSection(1)">&gt;</button>
+                    </div>
             </div>
 
         </div>
